--- a/package.json
+++ b/package.json
@@ -12,14 +12,25 @@
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss": "^3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
+    "clsx": "^1.2.1",
+    "daisyui": "^2.51.5",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.7"
   }
 }
